# worlds-of-white-game

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  blender-export.py  exploration.sln
changelogs/: 2018-04-12.txt  2018-04-19.txt  2018-04-26.txt  2018-05-03.txt  2018-05-10.txt  2018-05-17.txt  2018-12-06.txt  2018-12-13.txt  2018-12-20.txt  2019-01-03.txt  2019-01-10.txt  2019-01-17.txt  2019-01-24.txt  2019-05-23.txt
exploration/: CharacterModel.h  DecorationModel.h  EntitySpawnInfo.h  EntityType.h  GameState.h  InputManager.cpp  InputManager.h  InstanceSpawnInfo.h  Model.cpp  Model.h  ModelReader.h  PlayerModel.h  exploration.vcxproj  exploration.vcxproj.filters  main.cpp
exploration/cameras/: FollowCamera.cpp  FollowCamera.h  FreeCamera.cpp  FreeCamera.h  ICamera.h  IdleCamera.cpp  IdleCamera.h  TrackCamera.cpp  TrackCamera.h
exploration/entities/: AnimatedEntity.cpp  AnimatedEntity.h  DecorationEntity.cpp  DecorationEntity.h  Entity.cpp  Entity.h  PhysicsEntity.cpp  PhysicsEntity.h  PlayerEntity.cpp  PlayerEntity.h  SmashEffectEntity.cpp  SmashEffectEntity.h  SpiritEntity.cpp  SpiritEntity.h  TerrainEntity.cpp  TerrainEntity.h
exploration/graphics/: DebugProgram.cpp  DebugProgram.h  DepthProgram.cpp  DepthProgram.h  IAnimator.h  LineProgram.h  ScreenProgram.cpp  ScreenProgram.h  framebuffer.cpp  framebuffer.h  joint.cpp  joint.h  jointPose.cpp  jointPose.h  model.cpp  model.h  modelInstance.cpp  modelInstance.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h
exploration/graphics/programs/: DebugProgram.cpp  DebugProgram.h  DepthProgram.cpp  DepthProgram.h  LineProgram.cpp  LineProgram.h  ScreenProgram.cpp  ScreenProgram.h
exploration/instances/: AnimatedInstance.cpp  AnimatedInstance.h  CharacterInstance.cpp  CharacterInstance.h  DecorationInstance.cpp  DecorationInstance.h  Instance.cpp  Instance.h  ModelInstance.cpp  ModelInstance.h  PhysicsInstance.cpp  PhysicsInstance.h  PlayerInstance.cpp  PlayerInstance.h  SpiritInstance.cpp  SpiritInstance.h
exploration/levels/: floating.blend  floating_level.txt  level_1_level.txt  temp_level.txt  testing.blend  testing_level.txt
exploration/libraries/cimg/include/cimg/: cimg.h
exploration/libraries/glad/include/glad/: glad.h
exploration/libraries/glad/src/: glad.c
exploration/libraries/libjpeg/include/libjpeg/: jmorecfg.h  win32_exports.h
exploration/libraries/libjpeg/lib/: jpeg.lib
exploration/logging/: ILogger.h  LoggingLevel.h  LoggingManager.cpp  LoggingManager.h  SourceLogger.cpp  SourceLogger.h
exploration/logging/loggers/: FileLogger.cpp  FileLogger.h  StreamLogger.cpp  StreamLogger.h
exploration/models/: bird_faces.txt  bird_final_idle_animation.txt  bird_final_test_animation.txt  bird_idle_animation.txt  bird_lines.txt  bird_run_animation.txt  bird_triangle_2_model.txt  bird_triangle_3_model.txt  bird_walk_animation.txt  block2_model.txt  block3_model.txt  block_animation.txt  block_animation_2.txt  block_model.txt  block_model_2.txt  floatingisland.blend  floatingisland_model.txt  flower.blend  flower_model.txt  grass_model.txt  level_1.blend  level_1_model.txt  mask_faces.txt  mask_lines.txt  octane_model.txt  plane_model.txt  player_model.txt  ring.blend  ring_model.txt  shortgrass.blend  shortgrass_model.txt  simple_animation.txt  simple_model.txt  spike_faces.txt  spike_lines.txt  spirit.blend  spirit_model.txt  tallgrass.blend  tallgrass_model.txt  temp_faces.txt  (+13 more)
exploration/shaders/: debug.frag.glsl  debug.vert.glsl  depth.frag.glsl  depth.geom.glsl  depth.vert.glsl  line.frag.glsl  line.geom.glsl  line.tesc.glsl  line.tess.glsl  line.vert.glsl  screen.frag.glsl
exploration/utilities/: logger.cpp  logger.h  ring.h
exploration/utilities/narray/: narray.hpp  operators.hpp
scripts/: blender_export_animation.py  blender_export_decoration_3.py  blender_export_decoration_4.py  blender_export_level.py  blender_export_model_1.py  blender_export_model_2.py  blender_export_model_3.py
storyboard/: gameplay.txt  magic.txt  story.txt
